# connect-your-books

./: CODE_OF_CONDUCT.md  Cargo.toml  README.md  deny.toml  docker-compose.yaml  example.env
.github/workflows/: audit.yaml  build.yaml  release.yaml
api/: Cargo.toml
api/docs/technical decisions/: authentication.md
api/src/: config.rs  configs.rs  constants.rs  databases.rs  lib.rs  middlewares.rs  routers.rs  schema.rs  schemas.rs  users.rs
api/src/configs/: database.rs  jwt.rs  openapi.rs
api/src/routers/: docs.rs  healthcheck.rs  statics.rs
api/src/routers/v1/: mod.rs
core/: Cargo.toml
core/src/connectors/: mod.rs
core/src/connectors/letspeppol/: mod.rs
core/src/connectors/letspeppol/acube/: acube.rs  authentication.rs  constants.rs
core/src/utility/: env_utils.rs  reqwest_utils.rs
database/: Cargo.toml
database/docs/: setup.md
database/entity/: Cargo.toml
database/entity/src/: devices.rs  lib.rs  prelude.rs  user.rs  users.rs
database/migration/: Cargo.toml
database/migration/src/: lib.rs  m20221118_080022_advertiser_devices.rs  m20221126_072008_users.rs  m20230813_082058_users.rs
database/src/: mutation.rs  query.rs
docker/: base.Dockerfile
frontend/: Cargo.toml  README.md  Trunk.toml  index.html  tailwind.config.js
frontend/docs/: setup.md
frontend/public/: app.webmanifest
frontend/src/: constants.rs  inits.rs  lib.rs  main.rs  models.rs  updates.rs  urls.rs  views.rs
frontend/src/components/: footer.rs  mod.rs  navbar.rs  svg.rs
frontend/src/pages/: authentication.rs  calendar.rs  dashboard.rs  home.rs  mod.rs  projects.rs  reports.rs  team.rs
frontend/src/pages/authentication/: inits.rs  mod.rs  models.rs  updates.rs  urls.rs  views.rs
frontend/src/pages/authentication/components/: sign_in.rs
frontend/src/pages/components/: footer.rs  mod.rs  navbar.rs  navigation_bar.rs  svg.rs
frontend/src/pages/components/authentication/: sign_in.rs
frontend/src/pages/components/home/: cta.rs  features.rs  hero.rs  team.rs
frontend/src/pages/home/: inits.rs  mod.rs  models.rs  updates.rs  urls.rs  views.rs
frontend/src/pages/home/components/: cta.rs  features.rs  hero.rs  mod.rs  team.rs
modules/: Cargo.toml
modules/src/: lib.rs
modules/src/connectors/letspeppol/acube/: acube.rs  constants.rs  mod.rs
modules/src/utility/: env_utils.rs  mod.rs
src/: main.rs
