[package]
name = "cyb"
version = "0.1.0"
authors = ["Mahdi Baghbani <mahdi.baghbani1@gmail.com>"]
description = "Connect Your Books"
keywords = ["timesheet"]
license = "AGPL-3.0-only"
homepage = "https://github.com/MahdiBaghbani/connect-your-books"
repository = "https://github.com/MahdiBaghbani/connect-your-books"
edition = "2021"
publish = false

[profile.release]
# do not perform backtrace for panic on release builds.
panic = "abort"
# perform optimizations on all codegen units.
codegen-units = 1
# "s" for normal optimize or "z" to optimize "aggressively" for size.
opt-level = "z"
# enable link time optimization.
lto = "fat"
# Incremental compilation causes rustc to save additional information to disk which will be reused when recompiling
# the crate, improving re-compile times. The additional information is stored in the target directory.
incremental = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [".", "api", "database", "database/entity", "database/migration", "modules"]

[dependencies]
api = { path = "api" }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
