[package]
name = "api"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "api"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
# internal crates.
database = { path = "../database" }
entity = { path = "../database/entity" }
migration = { path = "../database/migration" }
modules = { path = "../modules" }
# external crates.
jsonwebtoken = "9.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = "0.3"
tokio = { version = "1.34", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"

[dependencies.salvo]
version = "0.60.0"
features = [
    "affix",
    "caching-headers",
    "compression",
    "cors",
    "jwt-auth",
    "logging",
    "oapi",
    "rate-limiter",
    "serve-static"
]

[dev-dependencies]
