[package]
name = "core"
version = "0.1.0"
edition = "2021"

[lib]
name = "core"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
base64 = "0.21.0"
reqwest = { version = "0.11", default-features = false, features = ["json", "serde_json", "rustls-tls"] }
reqwest-middleware = "0.2.0"
reqwest-retry = "0.2.1"
reqwest-tracing = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.19", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"

[dev-dependencies]
