[package]
name = "database"
version = "0.1.0"
authors = ["Mahdi Baghbani <mahdi.baghbani1@gmail.com>"]
description = "Connect Your Books Database"
license = "AGPL-3.0-only"
edition = "2021"
publish = false

[lib]
name = "database"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
entity = { path = "entity" }
sea-orm = { version = "0.12", features = ["debug-print", "runtime-tokio-rustls", "sqlx-postgres", "macros"] }
uuid = { version = "1.6", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1.34", features = ["macros", "rt"] }

[features]
mock = ["sea-orm/mock"]

[[test]]
name = "mock"
required-features = ["mock"]