[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[lib]
# cdylib stands for "C dynamic library" — a WASM module is kind of like a dynamic library, and
# "C" should be understood as just meaning "native format, no Rust-specific conventions".
# In order to get a .wasm file, you must request a crate-type of cdylib in your configuration
# (and this is also standard when using wasm-pack)
crate-type = ["lib", "cdylib"]

[package.metadata.wasm-pack.profile.release]
# "s" for normal optimize or "z" to optimize "aggressively" for size.
wasm-opt = ["-Oz"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
seed = { version = "0.10.0", features = ["routing"] }
serde = "1.0"
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3"
features = [
    "Blob",
    "Event",
    "EventTarget",
    "File",
    "FileList",
    "FormData",
    "HtmlInputElement",
    "ScrollBehavior",
    "ScrollToOptions",
]