[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
chrono = "0.4"
gloo-console = "0.3.0"
gloo-net = "0.5.0"
gloo-storage = "0.3.0"
seed = { version = "0.10.0", features = ["routing"] }
serde = "1.0"
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3"
features = [
    "Blob",
    "Event",
    "EventTarget",
    "File",
    "FileList",
    "FormData",
    "HtmlInputElement",
    "ScrollBehavior",
    "ScrollToOptions",
]
